--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portofolio</title>
-</head>
-<body>
-    
+<footer>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:example@example.com">example@example.com</a></p>
+    </section>
+    <hr>
+    <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
