--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <footer>
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:example@example.com">example@example.com</a></p>
+        <p>Email: <a href="mailto:example@example.com">dwirahmats344@gmail.com</a></p>
     </section>
     <hr>
     <p>&copy; 2024 My Portfolio. All rights reserved.</p>
